--- a/_posts/2021-11-06-begin.md
+++ b/_posts/2021-11-06-begin.md
@@ -1,6 +1,6 @@
 ---
 layout:post
-title:blog start
+title:start
 description:The brain is a good thing, but unfortunately I need to record
 tag:杂谈
 ---
