register and type

--- a/_posts/2021-11-13-bochs.md
+++ b/_posts/2021-11-13-bochs.md
@@ -24,6 +24,22 @@ rsheng@ubuntu:~/github/x86_assembly$ bochs
  ```
  display_library: x, options="gui_debug"
  ```
+## 配置硬盘
+```
+rsheng@ubuntu:~/github/x86_assembly$ bximage
+```
+ata0-master: type=disk, path="master.img", mode=flat
+
+## 打开magic_break
+magic_break: enabled=1
+```
+xchg bx, bx ;在bx处自动打断点
+```
+
+## 启动
+```
+rsheng@ubuntu:~/github/x86_assembly$ bochs -q
+```
 
 ## 安装qemu
  ```
