--- a/_posts/2021-11-17-x86_assembly.md
+++ b/_posts/2021-11-17-x86_assembly.md
@@ -26,3 +26,61 @@ mov byte [2], 'e'
 ## 7c00问题
 IBM PC 5150 内存布局
 ![](/images/x86_assembly/IBM_5150.jpg)
+
+## 寄存器
+| 寄存器 | 描述             |
+| ----- | ---             |
+| AX    | 累加结果数据      |
+| BX    | 数据段数据指针    |
+| CX    | 字符串和循环计数器 |
+| DX    | I/O 指针         |
+| DI    | 目的操作数指针     |
+| SI    | 源操作数指针      |
+| SP    | 栈指针           |
+| BP    | 栈数据指针        |
+
+| 寄存器 | 高八位 | 低八位 |
+| ----- | ----- | ------|
+| AX    | AH    | AL    |
+| BX    | BH    | BL    |
+| CX    | CH    | CL    |
+| DX    | DH    | DL    |
+
+| 段寄存器 | 描述         |
+| ------- | ----------- |
+| CS      | 代码段寄存器  |
+| DS      | 数据段寄存器  |
+| SS      | 栈段寄存器   |
+| ES      | 额外的寄存器  |
+
+ - IP
+ - FLAG / psw
+```
+mov cx, (message_end - message)
+
+loop1:
+	mov al, [ds:si]
+	mov [es:di], al
+
+	inc si
+	add di, 2
+
+	loop loop1
+
+message:
+	db "hello world!!!", 0
+message_end:
+```
+## 数据类型
+```
+db 100; define byte
+dw 0xaa55; define word
+dd 0x12345678; define double word
+
+dw 55aah
+db 1111_0000b
+db 0b0000_1111
+
+db "hello world!!!", 0, 12, 123
+```
+![](/images/x86_assembly/type.jpg)
