call ret and int

--- a/_posts/2021-11-17-x86_assembly.md
+++ b/_posts/2021-11-17-x86_assembly.md
@@ -84,3 +84,132 @@ db 0b0000_1111
 db "hello world!!!", 0, 12, 123
 ```
 ![](/images/x86_assembly/type.jpg)
+
+## 8086寻址方式
+ - 立即数的位数
+ - 默认段寄存器
+ - 乘法指结果在两个寄存器
+
+## 标志寄存器
+| 位 | 标志 | 英文 | 描述 |
+| -- | --- | --- | --- |
+| 0  | CF  | Cerry | 进位标志 |
+
+## 转移指令
+8086程序的指令地址 cs:ip 下一条指令的地址，物理地址 = cs << 4 + 16
+
+jmp short start 占用两个字节，jmp 偏移地址 -128 - 0x127
+jmp neaar start 占用三个地址，-32768 - 32767
+改变偏移地址 只能寻64KB内存空间
+
+<!-- jmp far -->
+改变段地址
+jmp far cs:ip
+
+cmp ax, bx ; sub ax, bx ——> flag
+
+## 补码
+负数的补码是原码取反再加一
+x + 1 = 0 ——>  x = -1
+
+0b1111_1111 = -1
+0b1111_1110 = -2
+
+0b1111_1011 = -5
+
+## 堆栈和函数
+call faction ——> push ip
+                 jmp faction
+ret ——> pop ip
+?? 代返回值的函数?
+
+### 远调用
+call far faction ——> push cs
+                     push ip
+                     jmp faction
+retf ——> pop ip
+         pop cs
+```
+call 0:print; calf
+
+halt:
+  jmp halt
+
+print:
+  push ax
+  push bx
+  push es
+
+  mov ax, 0xb800
+  mov es, ax
+  mov bx, [video]
+  mov byte [es:bx], '.'
+  add word [vide0], 2
+
+  pop es
+  pop bx
+  pop ax
+
+  retf
+
+voido:
+  dw 0x0
+```
+
+## 内中断和异常
+ - 远调用
+ ```
+ call far [faction]
+
+ faction:
+  dw print, 0; ip, cs
+ ```
+ - 内存布局
+ 0x000 - 0x3ff ——> 0x400B
+ 一个中断占4B
+ 0x400 / 4 = 0x100 ——> 256个
+
+ 0 除法异常  0 - 3
+ 0x80 linux系统调用，软中断 内存位置：(0x80 * 4 — 0x80 * 4 + 3)
+ - 内中断（软中断）
+ ```
+ ;注册中断处理函数
+ mov word [0x80 * 4], faction
+ mov word [0x80 * 4 + 2], 0
+
+ ;触发中断
+ int 0x80; push ip; push cs; push flag
+
+ halt:
+   jmp halt
+
+ print:
+   push ax
+   push bx
+   push es
+
+   mov ax, 0xb800
+   mov es, ax
+   mov bx, [video]
+   mov byte [es:bx], '.'
+   add word [vide0], 2
+
+   pop es
+   pop bx
+   pop ax
+
+   iret; pop flag; pop cs; pop ip
+ ```
+ - 异常
+ 异常与内中断的主要区别是触发机制的不同
+ ```
+ ;注册中断处理函数
+ mov word [0x0 * 4], faction
+ mov word [0x0 * 4 + 2], 0
+
+ ;触发中断
+ mov dx, 0
+ mov ax, 1
+ mov bx, 0
+ div bx ;dx:ax / bx
+ ```
