--- a/_posts/2021-11-17-x86_assembly.md
+++ b/_posts/2021-11-17-x86_assembly.md
@@ -213,3 +213,33 @@ voido:
  mov bx, 0
  div bx ;dx:ax / bx
  ```
+ 
+ ## 输入和输出
+ 
+ 用输入输出指令，来控制硬件（外围设备）
+  - 显示器 - 显卡
+  - 硬盘
+  - 键盘
+  
+ 端口 - 寄存器（D 边沿触发器） / 映射内存
+ 
+ Intel 0 - 65535 0x0000 ~ 0xffff
+ 
+ CRT 阴极射线管控制器
+ CRT 地址端口 0x3D4
+ CRT 数据端口 0x3D5
+ 
+ bochs 80 * 25 = 2000
+ 
+ 16位
+ 0 - 1999
+ 
+ 0x0E - 光标位置高八位
+ 0x0f - 光标位置低八位
+ 
+ ```s
+ in al, dx; dx 端口号
+ in ax, dx; ax/al 数
+ out dx, al
+ out dx, ax
+ ``` 
