--- a/_posts/2021-11-17-x86_assembly.md
+++ b/_posts/2021-11-17-x86_assembly.md
@@ -15,6 +15,7 @@ tag: error
 两个字节显示一个字符
  - 第一个字节表示字符
  - 第二个字节表示样式
+ 
 ```
 mov byte [0], 'T'
 mov byte [1], 11110000b
@@ -55,6 +56,7 @@ IBM PC 5150 内存布局
 
  - IP
  - FLAG / psw
+ 
 ```
 mov cx, (message_end - message)
 
@@ -158,7 +160,8 @@ voido:
 
 ## 内中断和异常
  - 远调用
- ```
+ 
+```
  call far [faction]
 
  faction:
@@ -172,7 +175,7 @@ voido:
  0 除法异常  0 - 3
  0x80 linux系统调用，软中断 内存位置：(0x80 * 4 — 0x80 * 4 + 3)
  - 内中断（软中断）
- ```
+```
  ;注册中断处理函数
  mov word [0x80 * 4], faction
  mov word [0x80 * 4 + 2], 0
@@ -214,32 +217,187 @@ voido:
  div bx ;dx:ax / bx
  ```
  
- ## 输入和输出
+## 输入和输出
+
+用输入输出指令，来控制硬件（外围设备）
+ - 显示器 - 显卡
+ - 硬盘
+ - 键盘
+
+端口 - 寄存器（D 边沿触发器） / 映射内存
+
+Intel 0 - 65535 0x0000 ~ 0xffff
+
+CRT 阴极射线管控制器
+CRT 地址端口 0x3D4
+CRT 数据端口 0x3D5
+
+bochs 80 * 25 = 2000
+
+16位
+0 - 1999
+
+0x0E - 光标位置高八位
+0x0f - 光标位置低八位
  
- 用输入输出指令，来控制硬件（外围设备）
-  - 显示器 - 显卡
-  - 硬盘
-  - 键盘
-  
- 端口 - 寄存器（D 边沿触发器） / 映射内存
- 
- Intel 0 - 65535 0x0000 ~ 0xffff
- 
- CRT 阴极射线管控制器
- CRT 地址端口 0x3D4
- CRT 数据端口 0x3D5
- 
- bochs 80 * 25 = 2000
- 
- 16位
- 0 - 1999
- 
- 0x0E - 光标位置高八位
- 0x0f - 光标位置低八位
- 
- ```s
+```s
  in al, dx; dx 端口号
  in ax, dx; ax/al 数
  out dx, al
  out dx, ax
- ``` 
+```
+
+## 外中断和时钟
+CPU ---> 硬件，端口
+ - 键盘
+ - 鼠标
+```mermaid
+flowchart LR
+取值 --> 译码 --> 执行 --> 中断
+```
+---
+
+ - 时钟信号/脉冲 - CPU 的脉搏
+ - 时钟中断 - OS 的脉搏
+ 
+---
+8086 两根线
+ - NMI Non Maskable Interrupt / 不可屏蔽中断
+ - INIR Interrupt / 可屏蔽中断
+---
+
+### 8259 
+可编程中断控制器 / PIC Program Interrupt Controller
+支持8个可屏蔽中断
+ - 级联方式
+ - 主芯片
+ - 从芯片
+```mermaid
+flowchart TD
+	subgraph CPU
+		NMI [NMI - 不可屏蔽中断]
+		INIR [INTR - 可屏蔽中断]
+	end
+	subgraph PICM [PIC - 可编程中断控制器 - 主片]
+		CLC [时钟]
+		KB [键盘]
+		SLAVE [级联从片]
+		FLOPPY [软盘]
+	end
+	subgraph PICS [PIC - 可编程中断控制器 - 从盘]
+		RTC [实时时钟]
+		HD [硬盘]
+		MOUSE [鼠标]
+	end
+	PICM --> INTR
+	PICS --> PICM
+```
+### 中断向量表 - 中断函数指针数组
+| 向量 | 功能 |
+| ---- | ---- |
+| 0    | 除法益处 |
+| 1    | 单步（用于调试）|
+| 2    | 非屏蔽中断 NMI  |
+| 3    | 断点 （用于调试）|
+| 4    | 溢出中断        |
+| 5    | 打印屏幕        |
+| 6 - 7| 保留            |
+| 8    | 时钟            |
+| 9    | 键盘            |
+| A    | 保留            |
+| B    | 串行通信COM2    |
+| C    | 串行通信COM1    |
+| D    | 保留            |
+| E    | 软盘控制器      |
+| F    | 并行打印机      |
+
+### 端口号
+| 端口 | 说明 | 标记 |
+| ---- | ---- | ---- |
+| 0x20 | 主PIC命令端口 | PIC_M_CMD |
+| 0x21 | 主PIC数据端口 | PIC_M_DATA |
+| 0xA0 | 从PIC命令端口 | PIC_S_CMD |
+| 0xA1 | 从PIC数据端口 | PIC_S_DATA |
+
+### 寄存器
+ - ICW1 ~ ICW4 用于初始化 8259 initialization Command Words
+ - OCW1 ~ OCW3 用于操作 8259 Operation Commands Words
+
+```
+ - 注册中断函数
+ - 向 OCW1 写入屏蔽字，打开时钟中断
+ - sti 设置状态字 CPU 允许外中断
+ - 向 OCW2 写入 0x20, 表示中段处理完毕，可接受下次中断
+```
+### 中断处理函数执行栈区变化
+
+```
+	; 状态字 0x206 - 0b0010_0000_0110
+clock:
+	; push flags
+	; push cs
+	; push ip
+	
+	; xchg bx, bx ; 方便调试，查看栈区变化
+```
+
+## 硬盘读写
+
+### PC 的状态
+
+1. 加电
+2. BIOS
+3. 主引导扇区 --> 0x7c00 （主引导扇区加载到内存0x7c00处）
+4. 跳转到 --> 0x7c00
+
+---
+
+- 主引导扇区只有 512 个字节 / 包括硬盘分区信息，55aa
+
+---
+
+### 读取协议
+
+ - IDE Integrated Drive Electronics
+ - ATA Advanced Technology Attachment
+ 
+### 读取方式
+
+ - CHS 模式 - Cylinder / Head / Sector
+ - LBA 模式 - Logical Block Address
+ 
+### 硬盘操作端口
+
+| Primary 通道 | Secondary 通道 | in 操作       | out 操作     |
+| ------------ | -------------- | ------------ | ------------ |
+| Command Block Registers |
+| 0x1F0        | 0x170          | Data         | Data         |
+| 0x1F1        | 0x171          | Error        | Features     |
+| 0x1F2        | 0x172          | Sector count | Sector count |
+| 0x1F3        | 0x173          | LBA low      | LBA low      |
+| 0x1F4        | 0x174          | LBA mid      | LBA mid      |
+| 0x1F5        | 0x175          | LBA high     | LBA high     |
+| 0x1F6        | 0x176          | Device       | Device       |
+| 0x1F7        | 0x177          | Status       | Command      |
+
+---
+
+- 0x1F0 / 16bit 读写数据
+- 0x1F1
+- 0x1F2 / 8bit 读写扇区数量
+- 0x1F3 - 0x1F5 / 起始扇区的前 24 位 0 ~ 23 位
+- 0x1F6
+ - 0 - 3 / LBA 24 ~ 27位
+ - 4：0 主盘， 1 从盘
+ - 6：0 CHS 模式， 1 LBA
+ - 5 7： 固定为 1
+- 0x1F7:
+ out
+ - 0xEC: 识别硬盘
+ - 0x20: 读硬盘
+ - 0x30: 写硬盘
+ in
+ - 0: ERR
+ - 3: DRQ 数据准备完毕
+ - 7：
+
